<resources>
    <string name="app_name">Benicassim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_image">Image for navigation pane header</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_section_sleep_eat_drink">Sleep | Eat | Drink</string>
    <string name="menu_title_hotels">Hotels</string>
    <string name="menu_title_grocery_stores">Grocery Stores</string>
    <string name="menu_title_restaurants">Restaurants</string>
    <string name="menu_title_cafes">Cafes</string>
    <string name="menu_section_relax_chill_move">Relax | Chill | Move</string>
    <string name="menu_title_beaches">Beaches</string>
    <string name="menu_title_sports">Sports</string>
    <string name="menu_title_leisure_parks">Leisure Parks</string>
    <string name="menu_title_events">Events</string>
    <string name="home_benicassim_me_gusta">Benicassim Me Gusta</string>
    <string name="home_benicassim_playa">Benicassim Playa</string>
    <string name="home_benicassim_columbrete_islands">Columbrete Islands</string>
    <string name="home_benicassim_paella">Paëlla</string>
    <string name="home_benicassim_description_p1">
         Arabic: بنو قاسم‎‎ (according to numismatic findings)
        \n\n
        Benicassim is situated in the province of Castellón. It has an estimated population of around 19,000 inhabitants, but during the summer it reaches approximately 60,000.
        \n\n
        Benicassim offers six kilometers of sandy beaches with numerous services, installations and infrastructure to fully enjoy the stay: cleaning, public access, showers, feet showers, free drinkable water, beach-volley courts, floating diving boards with toboggans, wooden umbrellas…
        \n\n
        These beaches have been awarded the Blue Flag for Clean Seas of Europe since 1987. The coast zone is divided into five beaches, where there is also a promenade, along with special corridors for bikes, rollers, and runners.</string>
    <string name="home_benicassim_description_p2">
        The province of Castellón, and in particular Benicassim, offers many activities to take advantage of during your free time.
        In the inland region, there is also the natural park of "Desiert de las Palmas", where you can enjoy the calm and serenity of nature and find a lot of local species.
        \n\n
        The highest level is the Mount of Bartolo with an altitude of 729 meters. From there you can see the Columbrete Islands, which are 50 kilometers off the coast.</string>
    <string name="home_benicassim_description_p3">
        In Benicassim you can practice a lot of different sports like golf, tennis, squash/fronton, diving, wind surfing and sailing. Nearby, in the port area of Castellón, named El Grao de Castellón, there is a planetarium, a marina and an air club.
        \n\n
        Benicassim has an excellent climate that allows you to enjoy any outdoor activity you want to do or just take a walk and enjoy your stay.</string>
    <string name="location_picture">Picture for location</string>
    <string name="hotel_name_1">Hotel Trinimar</string>
    <string name="hotel_description_1">Simple rooms in a casual hotel offering free breakfast, Wi-Fi, a poolside bar and bike rentals.</string>
    <string name="hotel_web_1">hoteltrinimar.com</string>
    <string name="hotel_address_1">Av. Ferrandis Salvador, 184, 12560 Benicasim, Castellón, Spain</string>
    <string name="hotel_phone_1">+34 964 30 08 50</string>
    <string name="hotel_opening_hours_1"></string>
    <string name="hotel_name_2">Hotel Intur Azor</string>
    <string name="hotel_description_2">Unfussy option with simple rooms, a pool, a spa, as well as free breakfast and parking.</string>
    <string name="hotel_web_2">intur.com</string>
    <string name="hotel_address_2">Av. Gimeno Tomas, 1, 12560 Benicàssim, Castelló, Spain</string>
    <string name="hotel_phone_2">+34 964 39 20 00</string>
    <string name="hotel_opening_hours_2"></string>
    <string name="hotel_name_3">Hotel Voramar</string>
    <string name="hotel_description_3">Casual beachfront hotel offering a sea-view restaurant and a cafe/bar with a terrace.</string>
    <string name="hotel_web_3">voramar.net</string>
    <string name="hotel_address_3">Paseo Marítimo Pilar Coloma, 1, 12560 Benicasim, Castellón, Spain</string>
    <string name="hotel_phone_3">+34 964 30 01 50</string>
    <string name="hotel_opening_hours_3"></string>
    <string name="hotel_name_4">Hotel Bersoca</string>
    <string name="hotel_description_4">Modest rooms in a casual lodging with a restaurant, lounge bar, outdoor pool, and free breakfast.</string>
    <string name="hotel_web_4">hotelbersoca.com</string>
    <string name="hotel_address_4">Gran Av. Jaume I, 217, 12560 Benicàssim, Castelló, Spain</string>
    <string name="hotel_phone_4">+34 964 30 12 58</string>
    <string name="hotel_opening_hours_4"></string>
    <string name="hotel_name_5">Hotel Costa Azahar</string>
    <string name="hotel_description_5">Airy, unpretentious hotel featuring relaxed rooms, some with balconies and sea views, others with a terrace.</string>
    <string name="hotel_web_5">costazaharhoteles.com</string>
    <string name="hotel_address_5">Av. Castalia, 46, 12100 El Grao de Castellón, Castellón, Spain</string>
    <string name="hotel_phone_5">+34 964 28 82 93</string>
    <string name="hotel_opening_hours_5"></string>
    <string name="restaurant_name_1">Tasca El Pollo</string>
    <string name="restaurant_description_1">Chicken Specialities</string>
    <string name="restaurant_web_1">tascaelpollo.es</string>
    <string name="restaurant_address_1">Av. Ferrandis Salvador, 186, 12560 Benicasim, Castellón, Spain</string>
    <string name="restaurant_phone_1">+34 964 30 10 93</string>
    <string name="restaurant_opening_hours_1">MON&#8211;SUN: 10h&#8211;23h30</string>
    <string name="restaurant_name_2">Pizzería Italia Di Filippo</string>
    <string name="restaurant_description_2">A renowned restaurant where you can enjoy the most delicious pizzas, in the middle of a quiet and familiar atmosphere.</string>
    <string name="restaurant_web_2">pizzeriaitaliacastellon.com</string>
    <string name="restaurant_address_2">Av. Ferrandis Salvador, 124-126, 12560 Benicasim, Castellón, Spain</string>
    <string name="restaurant_phone_2">+34 964 392 727</string>
    <string name="restaurant_opening_hours_2"></string>
    <string name="restaurant_name_3">Belumar</string>
    <string name="restaurant_description_3">Bar &amp; Grill</string>
    <string name="restaurant_web_3">complejobelumar.com</string>
    <string name="restaurant_address_3">Av. Ferrandis Salvador, 141, 12560 Benicasim, Castellón, Spain</string>
    <string name="restaurant_phone_3">+34 964 39 48 17</string>
    <string name="restaurant_opening_hours_3">MON&#8211;SUN: 10h&#8211;1h</string>
    <string name="restaurant_name_4">La Caracola Morada</string>
    <string name="restaurant_description_4">Gourmet Dishes</string>
    <string name="restaurant_web_4">lacaracolamorada.com</string>
    <string name="restaurant_address_4">Av. Ferrandis Salvador, 124, 12560 Benicasim, Castellón, Spain</string>
    <string name="restaurant_phone_4">+34 964 63 58 30</string>
    <string name="restaurant_opening_hours_4">MON&#8211;SUN: 8h30&#8211;1h30\nSUN: closes at midnight</string>
    <string name="restaurant_name_5">Les Barraques</string>
    <string name="restaurant_description_5">Best paëllas in town</string>
    <string name="restaurant_web_5">restaurantelesbarraques.com</string>
    <string name="restaurant_address_5">Gran Av. Jaume I, 217 A, 12560 Benicàssim, Castelló, Spain</string>
    <string name="restaurant_phone_5">+34 964 30 02 48</string>
    <string name="restaurant_opening_hours_5">MON&#8211;SUN: 9h&#8211;23h30\nWED: Closed</string>
    <string name="restaurant_name_6">El Lipizano</string>
    <string name="restaurant_description_6">Tapas / Paëllas on Saturday and Sundays / Rice and Fideuás Specialities</string>
    <string name="restaurant_web_6">lipizano.es</string>
    <string name="restaurant_address_6">Carrer Sant Tomàs, 15, 12560 Benicàssim, Castelló, Spain</string>
    <string name="restaurant_phone_6">+34 964 30 46 43</string>
    <string name="restaurant_opening_hours_6">MON&#8211;SUN: 13h&#8211;17h\nMON&#8211;SAT: 19h30&#8211;1h</string>
    <string name="cafe_name_1">Cafe Rebecca</string>
    <string name="cafe_description_1">Chill cafe in students area</string>
    <string name="cafe_web_1">facebook.com/caferebeca</string>
    <string name="cafe_address_1">Carrer Albéniz, 14, 12560 Benicàssim, Castelló, Spain</string>
    <string name="cafe_phone_1">+34 964 30 29 87</string>
    <string name="cafe_opening_hours_1">MON&#8211;FRI: 6h30&#8211;12h\nSAT: 8h30&#8211;12h\nSUN: 15h&#8211;0h</string>
    <string name="cafe_name_2">El Corb</string>
    <string name="cafe_description_2">Espresso Bar</string>
    <string name="cafe_web_2"></string>
    <string name="cafe_address_2">Plaça de l\'Estació, 11, 12560 Benicàssim, Castelló, Spain</string>
    <string name="cafe_phone_2">+34 964 30 15 99</string>
    <string name="cafe_opening_hours_2">MON&#8211;TUE: Closed\nWED: 17h30&#8211;1h\nTHU: 11h&#8211;1h\nFRI-SAT: 17h&#8211;2h30\nSUN: 12h&#8211;1h30</string>
    <string name="cafe_name_3">Nou Cafe</string>
    <string name="cafe_description_3">4.7 Stars / 103 Reviews on Google</string>
    <string name="cafe_web_3"></string>
    <string name="cafe_address_3">Carrer Strassen Bad Salzdetfurth, 11, 12560 Benicàssim, Castelló, Spain</string>
    <string name="cafe_phone_3">+34 964 86 83 82</string>
    <string name="cafe_opening_hours_3">24/7"</string>
    <string name="grocery_store_name_1">Supermercado Montemar</string>
    <string name="grocery_store_description_1">Supermarket</string>
    <string name="grocery_store_web_1"></string>
    <string name="grocery_store_address_1">Carrer el Palmeral, 8, 12560 Benicàssim, Castelló, Spain</string>
    <string name="grocery_store_phone_1">+34 964 39 29 60</string>
    <string name="grocery_store_opening_hours_1"></string>
    <string name="grocery_store_name_2">Consum</string>
    <string name="grocery_store_description_2">Supermarket</string>
    <string name="grocery_store_web_2">consum.es</string>
    <string name="grocery_store_address_2">Gran Av. Jaume I, 87, 12560 Benicàssim, Castelló, Spain</string>
    <string name="grocery_store_phone_2">+34 964 30 22 03</string>
    <string name="grocery_store_opening_hours_2">MON&#8211;SAT: 9h&#8211;21h30\nSUN: Closed</string>
    <string name="grocery_store_name_3">Mercadona</string>
    <string name="grocery_store_description_3">Supermarket</string>
    <string name="grocery_store_web_3">mercadona.es</string>
    <string name="grocery_store_address_3">Gran Av. Jaume I, 10, 12560 Benicàssim, Castelló, Spain</string>
    <string name="grocery_store_phone_3">+34 964 30 40 63</string>
    <string name="grocery_store_opening_hours_3">MON&#8211;SAT: 9h&#8211;21h30\nSUN: Closed</string>
    <string name="grocery_store_name_4">Lidl</string>
    <string name="grocery_store_description_4">Supermarket</string>
    <string name="grocery_store_web_4">lidl.es</string>
    <string name="grocery_store_address_4">Avda. de Barcelona, 21, 12560 Benicasim, Castellón, Spain</string>
    <string name="grocery_store_phone_4">+34 902 24 32 22</string>
    <string name="grocery_store_opening_hours_4">MON&#8211;SAT: 9h&#8211;21h30\nSUN: 9h&#8211;15h</string>
    <string name="grocery_store_name_5">Lonatural by Calasana</string>
    <string name="grocery_store_description_5">Natural Foods Store</string>
    <string name="grocery_store_web_5">lonatural.tienda</string>
    <string name="grocery_store_address_5">Avinguda de Castelló, 56, 12560 Benicàssim, Castelló, Spain</string>
</resources>